  - Allow using external restic binary via --external-backend-binary parameter in CLI mode
  - GUI: Restore window is now faster
  - Prometheus metrics:
    - Metrics are now created for all types of operation
    - Metrics have npbackup execution state
  - Dry mode now works for all operations where restic supports dry-mode
  - Implemented scheduled task creator for Windows & Unix

## Fixes
  - Default exit code is now worst log level called unless specific errors are triggered
  - Fix deletion failed message for en lang
  - Fix Google cloud storage backend detection in repository uri
  - Backup admin password is now stored in a more secure way
  - GUI: Restore window now closes correctly when using the window control button
  - GUI: Show anonymized repo uri in GUI

## Misc
  - Current backup state now shows more precise backup state, including last backup date when relevant
  - Concurrency checks (pidfile checks) are now directly part of the runner
  - Allow a 30 seconds grace period for child processes to close before asking them nicely, and than not nicely to quit
  - Fully refactored prometheus metrics parser to be able to read restic standard or json outputs
  - Reimplmented auto upgrade after CLI/GUI split
  - Added initial tests
  - Exclude lists have been updated
  - Removed Windows installer from the project. We need to come up with a better solution

## 2.2.2 - 14/12/2023 (internal build only)
  - Fixed backup paths of '/' root partitions
  - Properly display repository init errors
  - Logs didn't show proper error status
  - Fixed wrong init detection for S3 backend

## 2.2.1 - 28/08/2023
  - Added snapshot deletion option in GUI
  - Fix ignore_cloud_files parameter did not work on some non systems (still an issue, see https://github.com/restic/restic/issues/4155)
  - Configured default backend connections to 2 for local, 8 for remote when default value '0' is given