@@ -45,6 +45,7 @@ def entrypoint(*args, **kwargs):
     npbackup_runner.verbose = kwargs.pop("verbose")
     npbackup_runner.live_output = not json_output
     npbackup_runner.json_output = json_output
+    npbackup_runner.no_cache = kwargs.pop("no_cache", False)
     if backend_binary:
         npbackup_runner.binary = backend_binary
     result = npbackup_runner.__getattribute__(operation)(
